App.Config connection string

--- a/EnviTech/App.config
+++ b/EnviTech/App.config
@@ -48,6 +48,6 @@
     </assemblyBinding>
   </runtime>
 	<connectionStrings>
-		<add name="EnviTechConnectionString" connectionString="Data Source=LAPTOP-VQ5MU40H\SQLEXPRESS;Initial Catalog=EnviTech;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False" providerName="System.Data.SqlClient" />
+		<add name="EnviTechConnectionString" connectionString="Server=localhost\SQLEXPRESS; Database=EnviTech; Trusted_Connection=true;" />
 	</connectionStrings>
 </configuration>
