--- a/EnviTech/packages.config
+++ b/EnviTech/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Azure.Core" version="1.35.0" targetFramework="net472" />
   <package id="Azure.Identity" version="1.10.3" targetFramework="net472" />
+  <package id="CommunityToolkit.Mvvm" version="8.2.2" targetFramework="net472" />
   <package id="Dapper" version="2.1.35" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.Data.SqlClient" version="5.2.0" targetFramework="net472" />
@@ -42,6 +43,7 @@
   <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="6.35.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Tokens" version="6.35.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net472" />
   <package id="System.Configuration.ConfigurationManager" version="6.0.1" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="8.0.0" targetFramework="net472" />
   <package id="System.IdentityModel.Tokens.Jwt" version="6.35.0" targetFramework="net472" />
