--- a/EnviTech/EnviTech.csproj
+++ b/EnviTech/EnviTech.csproj
@@ -248,6 +248,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Db\BaseRepository.cs" />
+    <Compile Include="Db\OperatorsRepository.cs" />
     <Compile Include="ViewModel\BaseViewModel.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Page Include="MainWindow.xaml">
