--- a/EnviTech/EnviTech.csproj
+++ b/EnviTech/EnviTech.csproj
@@ -249,7 +249,9 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Db\BaseRepository.cs" />
+    <Compile Include="Db\IOperatorsRepository.cs" />
     <Compile Include="Db\OperatorsRepository.cs" />
+    <Compile Include="Db\RepositoryFacade.cs" />
     <Compile Include="ViewModel\BaseViewModel.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Page Include="MainWindow.xaml">
