--- a/EnviTech/EnviTech.csproj
+++ b/EnviTech/EnviTech.csproj
@@ -248,15 +248,25 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="DataForm.xaml.cs">
+      <DependentUpon>DataForm.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Db\BaseRepository.cs" />
     <Compile Include="Db\IOperatorsRepository.cs" />
     <Compile Include="Db\IValuesRepository.cs" />
     <Compile Include="Db\OperatorsRepository.cs" />
     <Compile Include="Db\RepositoryFacade.cs" />
     <Compile Include="Db\ValuesRepository.cs" />
+    <Compile Include="StartupHelpers\AbstractFactory.cs" />
+    <Compile Include="StartupHelpers\IAbstractFactory.cs" />
+    <Compile Include="StartupHelpers\ServiceExtensions.cs" />
     <Compile Include="ViewModel\BaseViewModel.cs" />
     <Compile Include="ViewModel\Command.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
+    <Page Include="DataForm.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
